<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.hosts.HostListFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:clipToPadding="false" />

    <LinearLayout
        android:id="@+id/layoutEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_server"
            app:tint="@color/text_secondary"
            android:alpha="0.3"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hosts_msg"
            android:textColor="@color/text_secondary"
            android:textSize="20sp"
            android:layout_marginTop="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_add"
            android:textColor="@color/text_hint"
            android:textSize="16sp"
            android:layout_marginTop="4dp" />

    </LinearLayout>

</FrameLayout>