...
            android:orientation="horizontal"
            android:paddingVertical="14dp"
            android:paddingHorizontal="8dp"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btnPower"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:src="@drawable/ic_power"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/text_secondary"
...
                android:src="@drawable/ic_sleep"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/text_secondary"
                android:contentDescription="@string/sleep_vm" />

            <ImageButton
                android:id="@+id/btnSnapshot"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:src="@drawable/ic_snapshot"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/text_secondary"
...
